Bug 877606 - Port GTK2 to GTK3 - widget clipping. r=karlt