widget/gtk2/gtk3drawing.c
@@ -3048,6 +3048,10 @@ moz_gtk_widget_paint(GtkThemeWidgetType widget, cairo_t *cr,
                      GtkWidgetState* state, gint flags,
                      GtkTextDirection direction)
 {
+    /* A workaround for https://bugzilla.gnome.org/show_bug.cgi?id=694086
+     */
+    cairo_new_path(cr);
+
     switch (widget) {
     case MOZ_GTK_BUTTON:
         if (state->depressed) {
